--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>vibrate-test</title>
+    <title>vibrate-test</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body onload="onInit()" class="dark">
+    <header>
+        <h1>Header</h1>
+    </header>
     <main>
         <section class="vibrate-container">
             <button onclick="onVibrate()">Vibrate</button>
@@ -18,7 +21,124 @@
             <button onclick="onCheckSpeed()">Check speed</button>
             <section class="speed-data hide"><span></span> MB/s <span></span></section>
         </section>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti quasi fugit ipsa ratione alias officia
+            quia eligendi quod natus, amet quos quibusdam rem doloribus nobis voluptates asperiores vel voluptatem,
+            quidem dicta eius molestiae excepturi tempore accusantium quae? Consequatur mollitia expedita deserunt
+            labore amet. Nisi, sunt explicabo sapiente porro modi dolores, dolore molestiae debitis dolorem praesentium
+            ad at. Ipsa voluptas cumque deserunt recusandae explicabo corporis soluta delectus tempore nihil
+            perspiciatis aliquam, fugiat molestiae voluptatem non libero ut nemo saepe modi ab possimus fuga autem?
+            Dolore libero iste animi iure. Vel a reprehenderit nulla temporibus doloribus perferendis veritatis pariatur
+            excepturi culpa! Earum odit dignissimos sed rem maxime distinctio ipsam, voluptatem deleniti ad in possimus
+            dicta incidunt sunt repudiandae cum ut quaerat debitis et? A animi iste quasi nesciunt quibusdam reiciendis
+            accusamus fuga? Accusamus laudantium ad quam deserunt tenetur ducimus nostrum, sunt autem nam eligendi sit,
+            saepe ea vero aspernatur nulla sapiente natus.</p>
+        <p>Voluptatibus, repudiandae placeat. At ea nulla hic quos sunt possimus minima assumenda magnam voluptates sit
+            quisquam error accusantium vel dicta quibusdam eveniet dolore beatae culpa aut, cum fuga! Laboriosam facilis
+            iste blanditiis neque animi necessitatibus ut, consectetur dolore quisquam. Deserunt fuga placeat ad,
+            reprehenderit atque nemo? Provident sunt maxime officiis vero facilis eveniet iure? Hic architecto quidem
+            molestiae! Id similique obcaecati aut, fugit quisquam numquam labore, eligendi odio vero voluptas impedit
+            architecto modi recusandae quam velit laboriosam eius ipsa eum asperiores tempora consequatur culpa
+            doloremque voluptatibus reprehenderit. Veniam dignissimos iste et ipsa, quas optio officia. Repellat
+            consectetur recusandae dicta saepe? Perspiciatis possimus consequuntur odit velit aut magni quo vitae. Amet
+            cupiditate voluptas magnam iure beatae, porro distinctio sit corporis commodi soluta quaerat aliquam
+            temporibus consequuntur dicta odit recusandae vel quod quo quidem. Accusamus neque eius quidem molestias
+            repellat, porro dolorum libero consectetur, quisquam, eveniet perspiciatis at! Delectus, iste! Saepe,
+            necessitatibus.</p>
+        <p>Nemo qui neque a reiciendis similique quas placeat aliquid, iure eaque minima ducimus facilis non fuga
+            quaerat necessitatibus mollitia labore? Consequatur temporibus asperiores excepturi commodi praesentium
+            assumenda repellendus impedit tempora harum libero, odit voluptates eius amet illo explicabo consectetur
+            laudantium nostrum magnam. Perspiciatis et sit, nihil enim accusantium quod aliquid sint tempore facilis ad
+            iste ratione modi nisi sunt recusandae deleniti? Itaque, beatae! Maxime repellat perferendis vitae quae sed
+            minima praesentium pariatur nemo sint neque asperiores iste facilis consequuntur hic similique officiis quam
+            et ullam repudiandae, ut deserunt? Porro voluptatum molestias obcaecati quia tenetur beatae corporis labore
+            dolorem laboriosam, error officiis iusto magni debitis? Maxime, earum similique nesciunt doloribus nam magni
+            quasi accusantium quae non aut distinctio dolores numquam animi qui natus voluptas inventore excepturi enim,
+            eligendi quod quibusdam quo id. Voluptate quas aspernatur est, aliquam amet rerum dignissimos ipsam, ducimus
+            error, modi voluptates facere molestias quo ea impedit corporis.</p>
+        <p>Labore dolorem eveniet saepe consequuntur non enim delectus maiores in vitae dolorum, illum voluptate iure
+            rem incidunt doloremque odio, obcaecati libero numquam quia porro explicabo reprehenderit error maxime.
+            Necessitatibus illum doloribus repudiandae, quibusdam magni nostrum, facilis deserunt exercitationem optio
+            sequi animi vero. Natus similique obcaecati cum, reprehenderit praesentium corrupti quos! Totam quidem
+            labore recusandae hic autem rem pariatur voluptatum? Fuga nulla animi quasi ea, temporibus reprehenderit
+            eius dolor voluptates eveniet qui, repudiandae incidunt exercitationem, ut error illum facilis unde dolore
+            excepturi dicta consectetur nesciunt. Quaerat accusantium reprehenderit, expedita voluptas non sed
+            architecto, repellat veritatis distinctio debitis ducimus voluptates aspernatur ipsum provident perspiciatis
+            amet eum odit pariatur repudiandae omnis suscipit iusto magnam beatae. Voluptate porro ad doloremque fugiat
+            quo ipsa illum ea libero numquam nostrum iste quasi unde quod, beatae quidem velit exercitationem tenetur
+            quas nobis quia autem commodi reiciendis corporis. Ullam suscipit mollitia cupiditate qui aspernatur, animi
+            et pariatur nulla?</p>
+        <p>Totam, cumque amet quaerat culpa blanditiis nemo necessitatibus cupiditate illum dolorum adipisci quam sequi
+            recusandae odio esse exercitationem fugit earum officiis tempora unde asperiores dolore dignissimos non.
+            Quasi animi voluptate distinctio incidunt harum ad ab quae perspiciatis maxime, eos, deserunt aliquid
+            dignissimos labore laborum voluptates! Neque iure unde esse. Modi consectetur eveniet adipisci veritatis
+            dolorem. Voluptatum corporis minima, vel, odio cum deserunt itaque, impedit corrupti iure doloremque
+            molestiae. Similique illum provident voluptas, minus facilis commodi praesentium nesciunt officia harum
+            dolorum! Harum, vero. Nam explicabo exercitationem facilis suscipit totam quam asperiores tempore unde,
+            dolore ipsa eligendi illo illum voluptas minima eveniet excepturi cupiditate ut consectetur? Aliquam ullam
+            ab minima eum distinctio perferendis enim pariatur quis? Quaerat cumque minima, sapiente earum eum
+            laudantium necessitatibus? Accusamus, reprehenderit nemo deleniti ipsam tempora voluptates quis alias
+            temporibus dolores cum libero laboriosam cupiditate aliquam minus laborum aliquid fugiat voluptatem
+            voluptas? Dolor et ipsa inventore impedit cumque!</p>
+        <p>Ipsa sequi dignissimos sit omnis? Commodi reprehenderit magnam ducimus in! Amet perspiciatis porro nemo
+            magni, temporibus sunt sit officiis exercitationem laudantium omnis cupiditate modi pariatur culpa
+            voluptates commodi ipsum perferendis laboriosam ut iusto similique non tenetur minus ea? Itaque quos ullam
+            aut enim. Vitae cupiditate corporis saepe quod soluta impedit necessitatibus inventore voluptate sapiente
+            labore dolores quibusdam magni totam ex neque, asperiores voluptatum eum quis ab corrupti iure laborum vel
+            officiis accusantium! Laborum consequatur pariatur ea soluta fuga sapiente nihil dolorum, est maxime
+            voluptas maiores repellat, autem quidem cupiditate. Omnis, necessitatibus! Doloremque, magnam quae? Itaque
+            tempore quas dignissimos autem, quia quam rem repellat. Odio incidunt laudantium alias ipsa, dignissimos
+            accusamus exercitationem nisi nostrum ut facilis dicta enim in animi necessitatibus dolor praesentium fugiat
+            numquam nihil nam omnis. Enim dolorum, eaque, odio dolor necessitatibus illum fugiat consectetur dolorem
+            eveniet voluptate velit! Fugit numquam nisi necessitatibus voluptate velit vitae aperiam quo odit!</p>
+        <p>Enim ducimus ut aliquid voluptate saepe impedit itaque, iste soluta harum laudantium animi facere quo
+            dolores, necessitatibus est dignissimos porro provident libero? Temporibus ut aut rerum dicta natus in
+            perferendis eos? Est asperiores illum, fugit excepturi quidem facere nesciunt, itaque quo nihil hic
+            recusandae doloribus aliquid. Velit, adipisci nulla ipsam et nemo eaque nisi explicabo laboriosam voluptate
+            id sint dolorum quidem enim quod aspernatur atque rem molestiae architecto, molestias delectus deserunt?
+            Ullam explicabo laboriosam tempora quis adipisci cupiditate quibusdam ratione, illum corporis, quos modi
+            molestiae, reiciendis saepe officia nobis quod dignissimos perspiciatis perferendis tempore. Adipisci vero
+            pariatur deserunt nisi voluptates vitae placeat. Debitis sapiente quas explicabo in impedit culpa maxime,
+            sed dicta? Modi nesciunt cum eaque ut libero, vero inventore fugiat voluptates, deserunt natus dignissimos
+            laborum ea itaque ullam nemo non! Libero rem iure beatae excepturi pariatur soluta eaque rerum architecto
+            assumenda! Explicabo, quasi blanditiis qui molestiae dolorum ad sequi.</p>
+        <p>Aliquid nobis inventore incidunt corrupti consequatur ab facere exercitationem, libero quasi officiis vitae
+            molestias omnis repellat error at quis quo expedita commodi laboriosam iste cumque earum similique eos.
+            Optio inventore autem numquam est? Porro velit doloribus quod nulla consequuntur incidunt esse ullam,
+            recusandae exercitationem necessitatibus nesciunt dolor explicabo mollitia. Obcaecati molestiae eligendi ea
+            magnam aspernatur eos sequi rerum commodi officia distinctio, saepe modi nisi nam aliquam excepturi tempora
+            quia alias assumenda laboriosam repellendus voluptatum illo! Doloremque unde maiores reprehenderit deserunt
+            quo quod earum perspiciatis est ipsam saepe labore, totam cumque minus voluptates fugiat aut alias
+            perferendis recusandae molestias commodi. Veniam neque incidunt iusto numquam minus laudantium unde
+            similique beatae nam, sunt repellendus ipsam modi quod sed repudiandae perspiciatis quia sint quae officia
+            eius deleniti harum dicta facilis. Officiis, doloribus. Reiciendis debitis tenetur id quam enim itaque,
+            aliquam aperiam dicta ipsa, nostrum temporibus facere! Sunt eum odio libero. Tenetur, illum architecto.</p>
+        <p>Quae optio qui pariatur fugit dolorem cupiditate architecto consequatur animi facilis? Ipsa aperiam quibusdam
+            hic in totam, maxime voluptatum perspiciatis eum obcaecati modi laborum perferendis consequuntur nobis ex
+            cupiditate, assumenda labore! Explicabo incidunt quos natus. Nam placeat labore quis, facere impedit,
+            commodi doloribus voluptatibus incidunt nulla ea vitae voluptatum a blanditiis tempore adipisci, repudiandae
+            dolor necessitatibus architecto! Sapiente fuga tenetur incidunt commodi eligendi voluptas beatae aperiam
+            fugiat atque eum! Minima reprehenderit nihil ipsum cupiditate modi numquam error quos cum maiores tempore
+            reiciendis ipsa facere dolores odit quidem corporis consequuntur impedit, vitae excepturi, perspiciatis
+            soluta aperiam veritatis repudiandae. Facere voluptatem id praesentium vitae magni, repellendus maxime
+            aliquam eius adipisci ad magnam, voluptatibus tempore culpa ullam exercitationem, incidunt sit impedit
+            perspiciatis. Quam perferendis fugiat possimus deserunt. Voluptate doloribus ipsam non porro natus dolorum
+            eveniet, iste ut quia odit quis corporis, vitae quisquam aut dolorem id enim illum quaerat eaque sed, modi
+            mollitia.</p>
+        <p>Minus beatae praesentium aut quod ea dicta sint culpa, blanditiis, illo iste architecto optio laboriosam
+            ipsam odit dignissimos ratione voluptatibus quibusdam? Consequatur fugit repellendus vitae voluptatem earum,
+            explicabo perspiciatis harum maiores consectetur tempore debitis illum ipsum recusandae omnis corporis
+            dignissimos inventore nostrum ipsa animi, hic sequi ratione qui totam? Assumenda adipisci, ullam rerum natus
+            illum necessitatibus accusamus architecto quam. Exercitationem iure voluptas atque ratione! Quia harum nihil
+            architecto, molestias omnis minima ad et accusamus, quis iure totam quidem, possimus blanditiis!
+            Voluptatibus quae illo quas veniam provident laudantium optio porro, natus, velit molestias quod maxime
+            libero itaque, tempora culpa consequuntur quis cumque voluptatum similique sequi enim ex. Eum minima debitis
+            ipsam pariatur ratione repellendus molestiae cum soluta, et praesentium, nam impedit consectetur similique
+            vero nobis! Pariatur atque cum vel eaque ea earum suscipit culpa quisquam incidunt eos aliquam debitis
+            nesciunt ipsum, esse quia doloribus eius enim minima odit assumenda maiores a.</p>
     </main>
+    <footer>
+        <h1>Footer</h1>
+    </footer>
     <script src="services/utils.js"></script>
     <script src="main.js"></script>
 </body>
